--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,57 @@
 Django==4.1.3
+arrow==1.3.0
+asgiref==3.8.1
+binaryornot==0.4.4
+blinker==1.8.2
+certifi==2024.2.2
+chardet==5.2.0
+charset-normalizer==3.3.2
+click==8.1.7
+click-spinner==0.1.10
+colorama==0.4.6
+cookiecutter==2.6.0
+dash==2.17.0
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+distlib==0.3.8
+django-tailwind==3.8.0
+et-xmlfile==1.1.0
+filelock==3.13.4
+Flask==3.0.3
+gpcharts==1.3.3
+idna==3.7
+importlib_metadata==7.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+nest-asyncio==1.6.0
+numpy==1.26.4
+openpyxl==3.1.2
+packaging==24.0
+pandas==2.2.2
+pipenv==2023.12.1
+platformdirs==4.2.0
+plotly==5.22.0
+Pygments==2.18.0
+python-dateutil==2.9.0.post0
+python-slugify==8.0.4
+pytz==2024.1
+PyYAML==6.0.1
+requests==2.32.2
+retrying==1.3.4
+rich==13.7.1
+setuptools==69.2.0
+six==1.16.0
+sqlparse==0.5.0
+tenacity==8.3.0
+text-unidecode==1.3
+types-python-dateutil==2.9.0.20240316
+typing_extensions==4.12.1
+tzdata==2024.1
+urllib3==2.2.1
+virtualenv==20.25.1
+Werkzeug==3.0.3
+zipp==3.19.1
