--- a/vercel.json
+++ b/vercel.json
@@ -19,8 +19,8 @@
   ],
   "routes": [
     {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
+      "src": "/(.*)",
+      "dest": "/$1"
     },  
     {
       "src": "/(.*)",
